<resources>
    <string name="app_name">PropertyAnimation Example</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


        <string name="alpha">alpha</string>
        <string name="translation">translation</string>
        <string name="rotation">rotation</string>
        <string name="scale">scale</string>
        <string name="pivot_rotation">pivot + rotation</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawer">open drawer</string>
    <string name="closeDrawer">close drawer</string>
    <string name="color">color</string>
    <string name="custom">custom</string>
</resources>
